--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,4 +24,40 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+} */
+
+
+@layer utilities {
+    .widget {
+      @apply p-5 bg-white rounded-2xl
+    }
+    .flex-center {
+        @apply flex justify-center items-center;
+      }
+
+    .flex-between {
+      @apply flex justify-between items-center;
+    }
+    
+    .flex-around {
+      @apply flex justify-around items-center;
+    }
+
+    .page-wrapper {
+      @apply grid grid-cols-12 min-h-screen justify-between gap-6 p-6
+    }
+
+    .input-control {
+      @apply block p-2.5 border-none outline-none bg-bg-color text-text-second text-xs rounded-lg
+    }
+
+    .heading {
+      @apply text-base mb-1.5 text-text-primary font-semibold
+    }
+
+    .sub-heading {
+      @apply text-sm text-text-second
+    }
+
 }
+
